# FASTBA

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_pc.sh  main.cpp
config/: euroc.yaml
dataset/: configurator.h  dataset.h  dataset_reader.cpp  dataset_reader.h  dior.h  dior_dataset_reader.cpp  dior_dataset_reader.h  euroc_dataset_reader.cpp  euroc_dataset_reader.h  keypoint_filter.h  libsensors.cpp  libsensors.h  opencv_image.cpp  opencv_image.h  sensors_dataset_reader.cpp  sensors_dataset_reader.h  trajectory_reader.h
demo/: config.cpp  config.h  fastba_player.h  main.cpp  run_euroc.cpp  run_lightvis.cpp  run_log_forensics.cpp
lightvis/: image.cpp  image.h  lightvis.cpp  lightvis.h  lightvis_font_roboto.cpp  shader.h
src/cmake/: version.h.in
src/fastba/: fastba.cpp  fastba.h
src/geometry/: essential.cpp  essential.h  homography.cpp  homography.h  lie_algebra.cpp  lie_algebra.h  random.h  ransac.h  stereo.cpp  stereo.h
src/map/: feature.cpp  feature.h  frame.cpp  frame.h  grider_fast.h  map.cpp  map.h  sliding_window.cpp  sliding_window.h  tracker.cpp  tracker.h  type.h
src/optimizer/: bundle_adjustor.cpp  bundle_adjustor.h  ceres_bal.cpp  cost_function.h  datatype.h  eigen_ba.h  factor.cpp  factor.h  initializer.cpp  initializer.h  io_colmap.cpp  io_colmap.h  lie_algebra.cpp  lie_algebra.h  lm_optimizer.cpp  lm_optimizer.h  local_parameterization.cc  local_parameterization.h  map.cpp  map.h  parameter.h  pnp.cpp  pnp.h  preintegrator.cpp  preintegrator.h  problem.cpp  problem.h  projection_factor.h  read_bal.cpp  read_bal.h  read_colmap.cpp  read_colmap.h  sliding_window_tracker.cpp  sliding_window_tracker.h  solver.cpp  solver.h
src/optimizer/ceres/: four_dof_error_cost.h  lie_algebra_eigen_quaternion_parameterization.h  marginalization_error_cost.h  preintegration_error_cost.h  reprojection_error_cost.h
src/utils/: common.h  debug.h  euler_angle.cpp  euler_angle.h  forensics.cpp  forensics.h  identifiable.h  matrix_math.h  read_file.cpp  read_file.h  tic_toc.h
